welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: not found: type k
	if (nums[k] == value ) {return k }
                 ^