welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
var k = 0
	for (k <- 0 to nums.length-1) {
	if (nums[k] == value ) {return k }
	}
	return -1
}
